# vault-config-updater

./: .gitignore  Cargo.toml  README.md
.cargo-husky/hooks/: pre-push
src/: cli.rs  config_updater.rs  file_scanner.rs  lib.rs  main.rs
tests/: cli_tests.rs  config_updater_tests.rs  file_scanner_tests.rs  integration_tests.rs
tests/fixtures/: config.json  globalConfig.json  malformed.json  other.json
tests/fixtures/nested/: config.json
