[package]
name = "vault-config-updater"
version = "0.1.0"
edition = "2024"
description = "High-performance concurrent HashiCorp Vault token updater for configuration files"
readme = "README.md"
repository = "https://github.com/dominik-deak/vault-config-updater"

[[bin]]
name = "vault-config-updater"
path = "src/main.rs"

[dependencies]
walkdir = "2"
rayon = "1.7"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
regex = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
cargo-husky = "1"

[dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-check"]
